--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,7 @@
             android:layout_margin="10dp"
             android:background="#962c21"
             android:clickable="false"
-            android:text="Search city to locate retailer"
+            android:text="SEARCH CITY TO LOCATE RETAILER"
             android:textColor="@color/white"
 
             />
@@ -117,7 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="#962c21"
-            android:text="Continue"
+            android:text="CONTINUE"
             android:textColor="@color/white"
 
             />
@@ -186,7 +186,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="Terms and conditions | Privacy Policy"
+                android:text="Terms and Conditions | Privacy Policy"
                 android:textColor="#6d6d6d"
                 android:textSize="12dp"
                 />
